2012-07-31  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/spec/ipmi-oem-spec.h, ipmi-oem/:
	Fix macro naming.

	* ipmi-oem/: Support Wistron read/write/clear-proprietary-string.

	* ipmi-fru/: Support Wistron OEM FRU record. 
	
2012-07-30  Albert Chu <chu11@llnl.gov>

	* configure.ac: Prep for beta release.

	* README, man/freeipmi.7.pre.in: Update with ipmiseld information.

	* libfreeipmi/include/Makefile.am: Add missing files.
	
2012-07-27  Albert Chu <chu11@llnl.gov>

	* ipmi-sensors/: Support --output-sensor-thresholds.
	
2012-07-26  Albert Chu <chu11@llnl.gov>

	* man/ipmi-oem.8.pre.in: Add motherboard support information.
	
2012-07-24  Albert Chu <chu11@llnl.gov>

	* Fix error output message after confirmation from vendor on text.
	
2012-07-23  Albert Chu <chu11@llnl.gov>

	* ipmi-oem/ipmi-oem-intelnm.c: Use
	_ipmi_oem_intelnm_bad_completion_code in additional situation.

2012-07-19  Albert Chu <chu11@llnl.gov>

	* ipmi-oem/: Fix and support Wistron set-password-policy.
	
2012-07-18  Albert Chu <chu11@llnl.gov>
	
	* ipmi-oem/: Remove Wistron get-password-policy.
	
2012-07-16  Albert Chu <chu11@llnl.gov>

	* ipmi-oem/ipmi-oem-intelnm.c (_ipmi_oem_intelnm_bad_completion_code):
	Handle bad completion code commonly for all Intel NM.

	* ipmi-oem/: Support Wistron get/set-password-policy.
	
2012-07-13  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/sdr/ipmi-sdr-oem.h,
	libfreeipmi/sdr/ipmi-sdr-oem.c: New files.

	* ipmi-sensors/ipmi-sensors.c,
	ipmi-sensors/ipmi-sensors-oem-intel-node-manager.c,
	ipmi-oem/ipmi-oem-intelnm.c,
	libfreeipmi/sel/ipmi-sel-string-intel-node-manager.c: Use new
	ipmi_sdr_oem_parse_intel_node_manager.

	* libfreeipmi/api/: Increase default ipmb timeout.
	
2012-07-10  Albert Chu <chu11@llnl.gov>

	Add new tool ipmiseld.

	* ipmiseld/: New tool.

	* common/, etc/, man/: Add new manpage entries, init scripts,
	config files, as needed.

	* man/manpage-common-troubleshooting-sel.man: Create new common