@@ -45,6 +45,7 @@
 
 int
 ipmi_fru_oem_wistron_oem_record (ipmi_fru_state_data_t *state_data,
+				 uint8_t record_type_id,
 				 uint32_t manufacturer_id,
 				 uint8_t *oem_data,
 				 unsigned int oem_data_len)
@@ -55,7 +56,8 @@ ipmi_fru_oem_wistron_oem_record (ipmi_fru_state_data_t *state_data,
 
   if (state_data->oem_data.product_id == IPMI_WISTRON_PRODUCT_ID_C6220)
     {
-      if (oem_data_len)
+      if (record_type_id == IPMI_FRU_OEM_WISTRON_PROPRIETARY_STRING
+	  && oem_data_len)
 	{
 	  char string[IPMI_OEM_WISTRON_PROPRIETARY_STRING_MAX + 1];
 	  unsigned int len;
@@ -65,19 +67,19 @@ ipmi_fru_oem_wistron_oem_record (ipmi_fru_state_data_t *state_data,
 	  len = oem_data_len;
 	  if (len > IPMI_OEM_WISTRON_PROPRIETARY_STRING_MAX)
 	    len = IPMI_OEM_WISTRON_PROPRIETARY_STRING_MAX;
-
+	  
 	  memcpy (string,
 		  oem_data,
 		  len);
-		  
+	  
 	  pstdout_printf (state_data->pstate,
 			  "  FRU Proprietary String: %s\n",
 			  string);
-		  
+	  
 	  return (1);
 	}
     }
-
+  
   return (0);
 }
 
